Valentina's comments implemented
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10004 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/authorlist_npb.tex
+++ b/2014/90m paper/authorlist_npb.tex
@@ -38,6 +38,8 @@
 \author{The TOTEM Collaboration}
 \address{}
 
+% TODO: add final version
+\iffalse
 \AddAuthor{G.~Antchev}{}{}{a}
 \AddAuthor{P.~Aspell}{8}{}{}
 \AddAuthor{I.~Atanassov}{8}{}{a}
@@ -141,3 +143,4 @@
 \AddExternal{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
 \AddExternal{e}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
 \AddExternal{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
+\fi
