--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -83,7 +83,7 @@ $3$ & $25.5/26 = 0.98$ & $0.49$ & $0.69\un{\sigma}$ \cr
 \includegraphics{fig/t_dist_rel_with_fits.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit.
+Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$.
 }
 \label{fig:data rel ob}
 \end{center}
@@ -112,7 +112,7 @@ a_1 - a_2\\
 b_1 - b_2\\
 \end{pmatrix}\ ,
 \end{equation}
-where $\mat V_p$ is the covariance matrix for the difference vector $\Delta_p$. It yields $\chi_p^2 = 65.4$ which with $2$ degrees of freedom corresponds to a p-value of $6.2\cdot10^{-15}$ and a significance of $7.8\un{\sigma}$. This, in turn, rules out the hypothesis of a purely exponential behaviour of the data.
+where $\mat V_p$ is the covariance matrix for the difference vector $\Delta_p$. It yields $\chi_p^2 = 65.4$ which with $2$ degrees of freedom corresponds to a p-value of $6.2\cdot10^{-15}$ and a significance of $7.8\un{\sigma}$. This, in turn, rules out the hypothesis of a purely exponential behaviour of the data over the entire observed range.
 
 
 \iffalse
@@ -159,7 +159,7 @@ prob_A+B = 5.297602E-15
 \includegraphics{fig/t_dist_rel_with_split_fit.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``per-mille'' binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. The green line shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$, see Eq.~(\ref{eq:split fit param}).
+Differential cross-section using the ``per-mille'' binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The red line shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$, see Eq.~(\ref{eq:split fit param}). The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve.
 }
 \label{fig:data rel cpb0.001}
 \end{center}
