--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -1,13 +1,13 @@
 %----------------------------------------------------------------------------------------------------
 \section{Analysis}
 
-The analysis method is similar to the previously published ones~\cite{epl101-el,prl111}, in particular each diagonal is analysed
+The analysis method is similar to the previously published ones~\cite{epl101-el,prl111}. In particular, each diagonal is analysed
 separately. However, a different normalisation
 approach is used (Section~\ref{sec:normalisation}) that makes all 
 $t$-independent scaling factors irrelevant.
 
 The analysis is presented in two main blocks. Section~\ref{sec:event anal} covers all aspects related to the reconstruction of a single event.
-Section~\ref{sec:diff cs} describes the steps of transforming a raw $t$-distribution into the differential cross-section.
+Section~\ref{sec:diff cs} describes the steps of transforming a raw $t$-distribution into the differential cross-section. The $t$-distributions for the two diagonals are analysed separately. After comparison (Section~\ref{sec:cross checks}) they are finally merged (Section~\ref{sec:final data merging}).
 
 %----------------------------------------------------------------------------------------------------
 
