--- a/2014/90m paper/differential_cross_section.tex
+++ b/2014/90m paper/differential_cross_section.tex
@@ -268,7 +268,7 @@ The correction ${\cal A}_{\rm fluct}$ is calculated analytically from the probab
 \end{equation}
 \fi
 
-Figure \ref{fig:acceptance result} shows an example of the acceptance correction $t$-dependence for one diagonal. Since a single diagonal cannot cover more than a half of the phase space, the minimum value of the correction is $2$. As indicated in the figure, data points with too large correction (${\cal A} \gtrsim 5$) are discarded.
+Figure \ref{fig:acceptance result} shows an example of the acceptance correction $t$-dependence for one diagonal. Since a single diagonal cannot cover more than half of the phase space, the minimum value of the correction is $2$. As indicated in the figure, data points with too large correction (${\cal A} \gtrsim 5$) are discarded.
 
 \begin{figure}
 \begin{center}
@@ -475,7 +475,7 @@ $0.19005$ & $0.19965$ & $0.19478$ & $\S12.124$ & $0.0585$ & $\S0.517$ & $+\S0.50
 \subsection{Statistical Uncertainty Adjustment}
 \label{sec:stat unc adj}
 
-The statistical fluctuations in the differential cross-section using the ``optimised'' binning have been slightly overestimated (the ``per-mille'' binning does not suffer from this problem). One way of demonstration is splitting the data into groups of consecutive points small enough for linear function to approximate well the differential cross-section within each group. Then, performing straight-line fits through each group yields $\chi^2$ values slightly too low. Alternatively, the issue can be demonstrated as follows. The data sample is divided into several sub-samples corresponding to the same luminosity and the above-described analysis method is repeated for all of them. Then, fluctuations of each bin content are determined from the several sub-samples, giving values slightly lower than the uncertainty estimates.
+The statistical fluctuations in the differential cross-section using the ``optimised'' binning have been slightly overestimated (the ``per-mille'' binning does not suffer from this problem). One way of demonstration is splitting the data into groups of consecutive points small enough for a linear function to approximate well the differential cross-section within each group. Then, performing straight-line fits through each group yields $\chi^2$ values slightly too low. Alternatively, the issue can be demonstrated as follows. The data sample is divided into several sub-samples corresponding to the same luminosity, and the analysis method described in the earlier sections is repeated for each of these sub-samples. Then, fluctuations of each bin content are determined from the several sub-samples, giving values slightly lower than the uncertainty estimates.
 % Interpretation?
 
 As a remedy, the statistical uncertainties in the ``optimised'' binning have been divided by a factor of $1.176$. This value has been determined by requiring both binnings to give the same value of $\chi^2/\hbox{ndf}$ for fits of $\d\sigma / \d t$ to the fit function in Eq.~(\ref{eq:fit param}) with $N_b = 3$ which has enough flexibility to describe the data.
