Ken's and Vojtech's comments implemented
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@10031 4525493e-7705-40b1-a816-d608a930855b

--- a/2014/90m paper/conclusion.tex
+++ b/2014/90m paper/conclusion.tex
@@ -1,13 +1,15 @@
 %--------------------------------------------------
 
 \section{Conclusions and Outlook}
+\label{sec:conclusions}
 %
 Thanks to a very-high statistics data set TOTEM has excluded a purely exponential differential 
 cross-section for elastic proton-proton scattering with significance greater than $7\,\sigma$
 in the $|t|$ range from 0.027 to 0.2\,GeV$^{2}$ at $\sqrt{s}=8\,$TeV. The data
-are described satisfactorily with an exponent linear or quadratic in $t$.
+are described satisfactorily with an exponent quadratic or cubic in $t$.
 Using this refined parametrisation for the extrapolation to the optical point,
-$t = 0$, yields a total cross-section compatible with the previous measurement.
+$t = 0$, yields a total cross-section compatible with the previous measurement (in both cases
+neglecting the effects due to the Coulomb interaction).
 
 In an upcoming analysis, this proof of non-exponentiality in a 
 $t$-domain strongly
