--- a/2014/90m paper/data_taking.tex
+++ b/2014/90m paper/data_taking.tex
@@ -1,4 +1,5 @@
 \section{Data Taking}
+\label{sec:data taking}
 
 The presented measurement is based on data taken in July 2012, during the LHC fill number 2836 providing protons colliding at the centre-of-mass energy $\sqrt s = 8\un{TeV}$. The vertical RPs were inserted at a distance of $9.5$ times the transverse beam size, $\sigma_{\rm beam}$. Initially two, later three colliding bunch-pairs were used, with a typical population of $8\cdot10^{10}$ protons, yielding an instantaneous luminosity of about $10^{28}\un{cm^{-2}s^{-1}}$ per bunch. The main trigger required a coincidence between the RPs in both arms, combining the near and far units of a station in \textit{OR} to ensure maximal efficiency. During the about $11\un{h}$ long data-taking, a luminosity of $735\un{\mu b^{-1}}$ was accumulated, giving $7.2\cdot 10^6$ tagged elastic events.
 
@@ -6,19 +7,17 @@ The presented measurement is based on data taken in July 2012, during the LHC fi
 
 
 \section{Beam Optics}
+\label{sec:beam optics}
 
 The beam optics relates the proton state at the IP to its state at the RP location. At the IP, the direction of a proton can be described by the scattering angle $\theta^*$ (with respect to the $z$ axis) and azimuthal angle $\phi^*$ (about the $z$ axis). Alternatively, the horizontal ($x$) and vertical ($y$) projections of the scattering angle can be used:
 \begin{equation}
 \label{eq:scatt angle}
-\theta_x^* = \theta^* \cos\phi^*\ , \theta_y^* = \theta^* \sin\phi^*\ .
+\theta_x^* = \theta^* \cos\phi^*\ ,\qquad \theta_y^* = \theta^* \sin\phi^*\ .
 \end{equation}
 A proton with such scattering angles, emerging in IP vertex at $x^*$, $y^*$ with relative momentum loss $\xi \equiv \Delta p / p$ arrives at the RPs with transverse position
 \begin{equation}
 \label{eq:prot trans}
-	\begin{aligned}
-		x &= L_x\, \theta_x^* + v_x\, x^* + D_x\, \xi\ , \\
-		y &= L_y\, \theta_y^* + v_y\, y^* + D_y\, \xi\ ,
-	\end{aligned}
+	x = L_x\, \theta_x^* + v_x\, x^* + D_x\, \xi\ ,\qquad y = L_y\, \theta_y^* + v_y\, y^* + D_y\, \xi\ ,
 \end{equation}
 given by the optical functions: effective length $L$, magnification $v$ and dispersion $D$. Since protons lose no momentum in elastic collisions 
 (i.e. $\xi = 0$), the dispersion terms are irrelevant for this process.
