--- a/2014/90m paper/introduction.tex
+++ b/2014/90m paper/introduction.tex
@@ -22,3 +22,5 @@ This report presents a new data sample of elastic scattering at the energy of $\
 an unprecedented precision has been reached in the region of four-momentum transfer squared $0.027 \lesssim |t| \lesssim 0.2\un{GeV^2}$. Both statistical and systematic components of the differential cross-section uncertainty are controlled 
 at a level below $1\un{\%}$, except for the overall normalisation 
 (Section~\ref{sec:normalisation}). Consequently, the functional form of the cross-section can be strongly constrained, thus having more impact on theoretical model building and, in particular, on the extrapolation to $t=0$, used for total cross-section determination. The often used purely exponential extrapolation has been found inadequate, and extended parametrisations are provided, still yielding total cross-section values compatible with the previous TOTEM results~\cite{prl111} at the same energy.
+
+This article is organised as follows. Section~\ref{sec:apparatus} outlines the detector apparatus used for this measurement. Section~\ref{sec:data taking} summarises the data-taking conditions, details on the LHC beam optics are given in Section~\ref{sec:beam optics}. Section~\ref{sec:analysis} describes the data analysis and reconstruction of the differential cross-section. In Section~\ref{sec:results} several cross-section parametrisations are tested and from those compatible with data the total cross-section is derived. The results are summarised in Section~\ref{sec:conclusions}.
