--- a/2014/90m paper/results.tex
+++ b/2014/90m paper/results.tex
@@ -1,5 +1,6 @@
 %----------------------------------------------------------------------------------------------------
 \section{Results}
+\label{sec:results}
 
 %--------------------------------------------------
 % the results drawn from the optimised binning
@@ -29,11 +30,13 @@ which includes the pure exponential ($N_b = 1$) and its straight-forward extensi
 The fits have been performed by the standard least-squares method, in particular minimising:
 \begin{equation}
 \label{eq:chi sq}
-\chi^2 = \Delta^\T \mat V^{-1} \Delta\ ,\quad \Delta = (\hbox{data} - \hbox{fit})\ ,\quad \mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
+	\chi^2 = \Delta^\T \mat V^{-1} \Delta\ ,\qquad
+	\Delta = (\hbox{data} - \hbox{fit})\ ,\qquad
+	\mat V = \mat V_{\rm stat} + \mat V_{\rm syst}\ ,
 \end{equation}
 where $\Delta$ is a vector of differences between the differential cross-section data and a fit function evaluated at the bin representative points (see Table~\ref{tab:data}). The covariance matrix $\mat V$ is given by the sum of the statistical component $\mat V_{\rm stat}$ (statistical uncertainty from Table~\ref{tab:data} on the diagonal) and the systematic component $\mat V_{\rm stat}$ (see Eq.~(\ref{eq:covar mat})).
 
-The quality of fits is judged on the basis of several measures. The first is the value of $\chi^2$ after minimisation divided by the number of degrees of freedom (ndf). Secondly, the p-value stands for the probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Eventually, significance means the half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value. The significance is expressed in multiples of sigma, the standard deviation of the normal distribution.
+The quality of fits is judged on the basis of several measures. The first is the value of $\chi^2$ after minimisation divided by the number of degrees of freedom (ndf). Secondly, the p-value stands for the probability that a $\chi^2$ value greater than the observed one would be drawn from the $\chi^2$ distribution with the given number of degrees of freedom. Finally, significance means the half-width of a central region that needs to be excluded from a normal distribution to get the same integrated probability as the p-value. The significance is expressed in multiples of sigma, the standard deviation of the normal distribution.
 
 Figure~\ref{fig:data rel ob} shows several fits of the differential cross-section with the parametrisation in Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent, $N_b$. The corresponding fit quality is given in Table~\ref{tab:fits ob}, indicating that the purely exponential fit ($N_b = 1$) is excluded at $7.2\un{\sigma}$ significance.
 %
@@ -42,7 +45,8 @@ The other two fits ($N_b = 2, 3$) are of reasonable quality and can, therefore, 
 \label{eq:si tot}
 \sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,
 \end{equation}
-for the first time using a non-exponential extrapolation to $t=0$. Using the COMPETE~\cite{compete} preferred-model extrapolation of $\rho = 0.140\pm 0.007$ yields
+which neglects the effects due to the Coulomb interaction (QED).
+Using the COMPETE~\cite{compete} preferred-model extrapolation of $\rho = 0.140\pm 0.007$ yields
 \begin{equation}
 \label{eq:si tot results}
 	\begin{aligned}
@@ -51,6 +55,7 @@ for the first time using a non-exponential extrapolation to $t=0$. Using the COM
 	\end{aligned}
 \end{equation}
 which are well compatible with the previous measurement using the luminosity-independent method~\cite{prl111}.
+%for the first time using a non-exponential extrapolation to $t=0$.
 
 \begin{table}
 \caption{%
@@ -83,7 +88,7 @@ $3$ & $25.5/26 = 0.98$ & $0.49$ & $0.69\un{\sigma}$ \cr
 \includegraphics{fig/t_dist_rel_with_fits.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit. The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$.
+Differential cross-section using the ``optimised'' binning and plotted as relative difference from a reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The coloured lines correspond to fits with parametrisation Eq.~(\ref{eq:fit param}) and different numbers of parameters in the exponent. The red line lies seemingly too high with respect to the data points, which is a consequence of the systematic degrees of freedom included in the fit (some of the effects in Figure~\ref{fig:syst unc} may flatten the distribution at the expense of changing the overall normalisation). The yellow band corresponds to the full systematic uncertainty, the brown-hatched one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve with $N_b = 3$.
 }
 \label{fig:data rel ob}
 \end{center}
@@ -159,7 +164,7 @@ prob_A+B = 5.297602E-15
 \includegraphics{fig/t_dist_rel_with_split_fit.pdf}
 \vskip-4mm
 \caption{%
-Differential cross-section using the ``per-mille'' binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The red line shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$, see Eq.~(\ref{eq:split fit param}). The blue band corresponds to the full systematic uncertainty, the yellow one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve.
+Differential cross-section using the ``per-mille'' binning and plotted as relative difference from the reference exponential (see vertical axis). The black dots represent data points with statistical uncertainty bars. The red line shows pure exponential fits in regions below and above $|t| = 0.07\un{GeV^2}$, see Eq.~(\ref{eq:split fit param}). The yellow band corresponds to the full systematic uncertainty, the brown-hatched one includes all systematic contributions except the normalisation. Both bands are centred around the fit curve.
 }
 \label{fig:data rel cpb0.001}
 \end{center}
